--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
       <h2 class="subtitle">
         Let's go create new Todo
       </h2>
-      <button class="button is-primary is-rounded">To tasks</button>
+      <a class="button is-primary is-rounded" [routerLink]="['/tasks']" >To tasks</a>
     </div>
   </div>
 </section>
