--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,5 +1,5 @@
 <div style="position: absolute; top: 0; z-index: 2000; width: 100%;">
-  <progress class="progress is-small is-info" max="100"></progress>
+  <progress  *ngIf="loaderService.loading$ | async" class="progress is-small is-info" max="100"></progress>
 </div>
 
-<!-- *ngIf="loaderService.isLoading | async" -->
+
