--- a/src/app/shared/components/messages/messages.component.html
+++ b/src/app/shared/components/messages/messages.component.html
@@ -3,7 +3,7 @@
   [ngClass]="messages.type"
   *ngIf="showMessages">
     <div class="message-header">
-      <p>Danger</p>
+      <p>Message</p>
       <button class="delete" aria-label="delete" (click)="showMessages = !showMessages"></button>
     </div>
     <div class="message-body" >
